force-app/main/default/objects/Account/fields/Country_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Birth__c</fullName>
    <label>Country Of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>