force-app/main/default/objects/Account/fields/Current_lender__c.field-meta.xml
<CustomField>
    <fullName>Current_lender__c</fullName>
    <label>Current Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>