force-app/main/default/objects/Account/fields/Current_Mortgage_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Mortgage_Payment__c</fullName>
    <label>Current Mortgage Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>