force-app/main/default/objects/Account/fields/Deal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_End_Date__c</fullName>
    <label>Deal End Date</label>
    <type>Date</type>
</CustomField>