force-app/main/default/objects/Account/fields/Expected_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Expected_Retirement__c</fullName>
    <label>Expected Retirement</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>