force-app/main/default/objects/Account/fields/have_you_lived_in_the_UK_for_more_than_1__c.field-meta.xml
<CustomField>
    <fullName>have_you_lived_in_the_UK_for_more_than_1__c</fullName>
    <description>have you lived in the UK for more than 12 months?</description>
    <inlineHelpText>have you lived in the UK for more than 12 months?</inlineHelpText>
    <label>Lived in the UK for more than 12 months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>