force-app/main/default/objects/Account/fields/Initial_rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_rate__c</fullName>
    <label>Initial Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>