force-app/main/default/objects/Account/fields/Introducer__c.field-meta.xml
<CustomField>
    <fullName>Introducer__c</fullName>
    <label>Introducer</label>
    <type>TextArea</type>
</CustomField>