force-app/main/default/objects/Account/fields/Introducer_Branch__c.field-meta.xml
<CustomField>
    <fullName>Introducer_Branch__c</fullName>
    <label>Introducer Branch</label>
    <type>TextArea</type>
</CustomField>