force-app/main/default/objects/Account/fields/Introducer_Company__c.field-meta.xml
<CustomField>
    <fullName>Introducer_Company__c</fullName>
    <label>Introducer Company</label>
    <type>TextArea</type>
</CustomField>