force-app/main/default/objects/Account/fields/Is_there_a_mortgage_attached_to_it__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_mortgage_attached_to_it__c</fullName>
    <description>Is there a mortgage attached to it?</description>
    <inlineHelpText>Is there a mortgage attached to it?</inlineHelpText>
    <label>Is there a mortgage attached to it?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>