force-app/main/default/objects/Account/fields/Junk_Lead__c.field-meta.xml
<CustomField>
    <fullName>Junk_Lead__c</fullName>
    <label>Junk Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>