force-app/main/default/objects/Account/fields/Marketing_Preferencce_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preferencce_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>