force-app/main/default/objects/Account/fields/Marketing_Preference_Mail__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preference_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail</label>
    <type>Checkbox</type>
</CustomField>