force-app/main/default/objects/Account/fields/Marketing_Preference_Phone__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preference_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone</label>
    <type>Checkbox</type>
</CustomField>