force-app/main/default/objects/Account/fields/Middle_name__c.field-meta.xml
<CustomField>
    <fullName>Middle_name__c</fullName>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>