force-app/main/default/objects/Account/fields/Mortgage_Renewal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Renewal_Due_Date__c</fullName>
    <label>Mortgage Renewal Due Date</label>
    <type>Date</type>
</CustomField>