force-app/main/default/objects/Account/fields/MW_User_ID__c.field-meta.xml
<CustomField>
    <fullName>MW_User_ID__c</fullName>
    <label>MW User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>