force-app/main/default/objects/Account/fields/National_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Insurance_Number__c</fullName>
    <label>National Insurance Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>