force-app/main/default/objects/Account/fields/Orig_Source_Cust_Ref__c.field-meta.xml
<CustomField>
    <fullName>Orig_Source_Cust_Ref__c</fullName>
    <label>Orig Source Cust Ref</label>
    <type>TextArea</type>
</CustomField>