force-app/main/default/objects/Account/fields/Reference_Source__c.field-meta.xml
<CustomField>
    <fullName>Reference_Source__c</fullName>
    <label>Reference Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>